# Photiso

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
Photiso/: App.xaml  BrowseFolderDialogAction.cs  MainWindow.xaml  Photiso.csproj  PhotoInfo.cs  PhotoMovedEventArgs.cs
app/: .gitignore  package-lock.json  package.json  tsconfig.json
app/archive/: ActionHistoryDialog.svelte  ActionHistoryList.svelte  Bracket.svelte  DoneView.svelte  FileHierarchy.svelte  Footer.old  FromDirectory.svelte  FromDirectoryPicker.svelte  OrganizeView.svelte  RecentDirectoryList.svelte  RecentDirectoryPill.svelte  RelativeToDirectoryPicker.svelte  RootFolders.svelte  RootToDirectory.svelte  RootToDirectoryPicker.svelte  StartStep.svelte  ToFileNamePicker.svelte  WelcomeView.svelte
app/src/: app.html  constants.ts  types.ts
previous-versions/v2/: Cargo.toml  photiso.toml
previous-versions/v2/notes/: error_handling.md  type_from.md
previous-versions/v2/src/: config.rs  photo_date_time.rs  photo_organizer.rs
src/: Photiso 2.0.sln  config.rs  dialogApi.ts  ipc.types.ts  main.rs  main.ts  organizer.ts  photoInfo.ts  photo_date_time.rs  preload.ts
src-electron/: main.ts  tsconfig.json
src/Photiso/: PhotoErrorEventArgs.cs  PhotoEventArgs.cs
src2/: package.json
v1/: .gitignore  LICENSE
v2/: .gitignore  electron_package.json  package.json  server.js  tsconfig.json  webpack.config.js
v3/: .gitignore  Cargo.toml  Photiso.toml  README.md  curry_closure.md
v3/src/: config.rs  file_hash.rs  main.rs  photo_date_time.rs  photo_info.rs  photo_organizer.rs
(+123 files in other folders)
