[package]
name = "photiso_rust"
version = "0.1.0"
authors = ["Geoff Cox <geoff.cox@live.com>"]
edition = "2018"

[dependencies]
toml = "0.5.7"
serde = { version = "1.0", features = ["derive"] }
kamadak-exif = "0.5.2"
chrono = "0.4.19"
anyhow = "1.0.34"
digest = "0.9.0"
ring = "0.16.16"
data-encoding = "2.3.1"